--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "node-sass": "^4.12.0",
     "node-sass-cli": "0.0.4",
     "pipeline": "^0.1.3",
+    "postprocessing": "^6.3.3",
     "readable-stream": "^3.3.0",
     "ruby": "^0.6.1",
     "sal.js": "^0.5.0",
     "svg-mesh-3d": "git+https://github.com/mattdesl/svg-mesh-3d.git",
+    "three": "^0.104.0",
     "three.js": "^0.77.1",
     "uglify-js": "^3.5.11",
     "yarn": "^1.15.2"
